feat: minor changes