@@ -3,9 +3,9 @@ package io.github.alathra.alathranwars.deathspectate;
 import io.github.alathra.alathranwars.AlathranWars;
 import io.github.alathra.alathranwars.deathspectate.event.DeathSpectatingEvent;
 import io.github.alathra.alathranwars.deathspectate.task.SpectateTask;
+import io.github.alathra.alathranwars.utility.Cfg;
 import io.github.alathra.alathranwars.utility.Logger;
 import io.github.milkdrinkers.colorparser.paper.ColorParser;
-import com.google.common.collect.ImmutableSet;
 import net.kyori.adventure.audience.Audience;
 import net.kyori.adventure.key.Key;
 import net.kyori.adventure.text.Component;
@@ -18,10 +18,8 @@ import org.bukkit.event.entity.PlayerDeathEvent;
 import org.bukkit.event.player.PlayerRespawnEvent;
 import org.bukkit.event.player.PlayerTeleportEvent;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.metadata.FixedMetadataValue;
 import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.persistence.PersistentDataType;
-import org.jetbrains.annotations.Nullable;
 
 import java.time.Duration;
 import java.util.HashSet;
@@ -29,100 +27,85 @@ import java.util.Objects;
 import java.util.Set;
 
 public class DeathUtil {
-    public final static String META_DEAD = "DEAD";
-    public final static String META_KEY_GAMEMODE = "DEAD_PREVIOUS_GAMEMODE";
-    public final static String META_KEY_FLYSPEED = "DEAD_PREVIOUS_FLY_SPEED";
-    public final static String META_AWAITING_RESPAWN = "DEAD_RESPAWN";
-    public final static String META_TELEPORTING = "DEAD_TP";
-
     private final static String PDC_PREFIX = "alathran_wars_death";
+
+    // Death PDC
     public final static NamespacedKey PDC_IS_DEAD = NamespacedKey.fromString(PDC_PREFIX + "_is_dead");
     public final static NamespacedKey PDC_RESPAWN_TIMER = NamespacedKey.fromString(PDC_PREFIX + "_respawn_timer");
+    public final static NamespacedKey PDC_RESPAWN_GAMEMODE = NamespacedKey.fromString(PDC_PREFIX + "_respawn_previous_gamemode");
+    public final static NamespacedKey PDC_RESPAWN_FLYSPEED = NamespacedKey.fromString(PDC_PREFIX + "_respawn_flyspeed");
+
+    // Respawning PDC
+    public final static NamespacedKey PDC_AWAITING_RESPAWN = NamespacedKey.fromString(PDC_PREFIX + "_respawn_needed"); // Exists on a player while they're being respawned
+
+    // Teleporting PDC
+    public final static NamespacedKey PDC_TELEPORTING = NamespacedKey.fromString(PDC_PREFIX + "_respawn_teleporting"); // Exists on a player if they're trying to teleport while dead
 
     public static boolean isSpectating(Player p) {
-        return p.getGameMode().equals(GameMode.SPECTATOR) && p.hasMetadata(META_DEAD);
+        return p.getGameMode().equals(GameMode.SPECTATOR) && PDC_IS_DEAD != null &&
+            p.getPersistentDataContainer().has(PDC_IS_DEAD, PersistentDataType.BOOLEAN);
     }
 
-    private static void addSpectator(Player p, GameMode gameMode, Duration respawnTime) throws StartSpectateException {
+    private static void addSpectator(Player p, GameMode gameMode, Duration respawnTime, float flySpeed) throws StartSpectateException {
+        final PersistentDataContainer pdc = p.getPersistentDataContainer();
+
+        Objects.requireNonNull(PDC_IS_DEAD, "Is Dead is null");
+        Objects.requireNonNull(PDC_RESPAWN_TIMER, "Respawn timer is null");
+        Objects.requireNonNull(PDC_RESPAWN_GAMEMODE, "Respawn game mode is null");
+        Objects.requireNonNull(PDC_RESPAWN_FLYSPEED, "Respawn fly speed is null");
+
+        pdc.set(PDC_IS_DEAD, PersistentDataType.BOOLEAN, true);
+        pdc.set(PDC_RESPAWN_TIMER, PersistentDataType.LONG, respawnTime.getSeconds());
+        pdc.set(PDC_RESPAWN_GAMEMODE, PersistentDataType.STRING, gameMode.name());
+        pdc.set(PDC_RESPAWN_FLYSPEED, PersistentDataType.FLOAT, flySpeed);
         p.setGameMode(GameMode.SPECTATOR);
         if (p.getGameMode() != GameMode.SPECTATOR) {
             Logger.get().warn(ColorParser.of("Another plugin prevented the player from entering the spectator gamemode!").build());
             throw new StartSpectateException();
         }
-
-        final AlathranWars instance = AlathranWars.getInstance();
-        p.setMetadata(META_DEAD, new FixedMetadataValue(instance, gameMode));
-        p.setMetadata(META_KEY_GAMEMODE, new FixedMetadataValue(instance, gameMode));
-        p.setMetadata(META_KEY_FLYSPEED, new FixedMetadataValue(instance, p.getFlySpeed()));
         p.setFlySpeed(0.0f);
-
-        try {
-            final PersistentDataContainer pdc = p.getPersistentDataContainer();
-
-            assert PDC_RESPAWN_TIMER != null;
-            assert PDC_IS_DEAD != null;
-
-            pdc.set(PDC_IS_DEAD, PersistentDataType.BOOLEAN, true);
-            pdc.set(PDC_RESPAWN_TIMER, PersistentDataType.LONG, respawnTime.getSeconds());
-        } catch (Exception ignored) {
-        }
     }
 
-    public static void removeSpectator(Player p, final @Nullable GameMode defaultGameMode) {
-        final AlathranWars instance = AlathranWars.getInstance();
+    private static void removeSpectator(Player p) {
+        final AlathranWars plugin = AlathranWars.getInstance();
+        final PersistentDataContainer pdc = p.getPersistentDataContainer();
 
-        final GameMode gameMode = Objects.requireNonNullElseGet(defaultGameMode, () -> instance.getServer().getDefaultGameMode());
-        try {
-            // Set game mode from meta
-            if (defaultGameMode == null && p.hasMetadata(META_DEAD)) {
-                p.setGameMode((GameMode) Objects.requireNonNull(p.getMetadata(META_DEAD).get(0).value()));
-                return;
-            }
+        Objects.requireNonNull(PDC_IS_DEAD, "Is Dead is null");
+        Objects.requireNonNull(PDC_RESPAWN_TIMER, "Respawn timer is null");
+        Objects.requireNonNull(PDC_RESPAWN_GAMEMODE, "Respawn game mode is null");
+        Objects.requireNonNull(PDC_RESPAWN_FLYSPEED, "Respawn fly speed is null");
 
-            p.setGameMode(gameMode);
-        } catch (Exception e) {
-            p.setGameMode(gameMode);
-        } finally {
-            p.removeMetadata(META_KEY_GAMEMODE, instance);
-        }
+        final GameMode previousGamemode = GameMode.valueOf(pdc.getOrDefault(PDC_RESPAWN_GAMEMODE, PersistentDataType.STRING, plugin.getServer().getDefaultGameMode().name()));
+        p.setGameMode(previousGamemode);
 
-        try {
-            final float previousFlySpeed = p.getMetadata(META_KEY_FLYSPEED).get(0).asFloat();
-            p.setFlySpeed(previousFlySpeed);
-        } catch (Exception e) {
-            p.setFlySpeed(1.0f);
-        } finally {
-            p.removeMetadata(META_KEY_FLYSPEED, instance);
-        }
+        final float previousFlySpeed = pdc.getOrDefault(PDC_RESPAWN_FLYSPEED, PersistentDataType.FLOAT, 1.0F);
+        p.setFlySpeed(previousFlySpeed);
 
-        try {
-            final PersistentDataContainer pdc = p.getPersistentDataContainer();
-
-            assert PDC_RESPAWN_TIMER != null;
-            assert PDC_IS_DEAD != null;
-
-            pdc.remove(PDC_RESPAWN_TIMER);
-            pdc.remove(PDC_IS_DEAD);
-        } catch (Exception ignored) {
-        }
-
-        p.removeMetadata(META_DEAD, instance);
+        pdc.remove(PDC_RESPAWN_TIMER);
+        pdc.remove(PDC_RESPAWN_GAMEMODE);
+        pdc.remove(PDC_RESPAWN_FLYSPEED);
+        pdc.remove(PDC_AWAITING_RESPAWN);
+        pdc.remove(PDC_TELEPORTING);
+        pdc.remove(PDC_IS_DEAD);
     }
 
-    public static void respawnPlayer(Player p) {
+    public static void respawnPlayerVanilla(Player p) {
         if (!isSpectating(p) || p.isDead())
             return;
 
-        Location spawnLocation = p.getBedSpawnLocation();
+        final PersistentDataContainer pdc = p.getPersistentDataContainer();
+
+        Location spawnLocation = p.getRespawnLocation(true);
         boolean isBedSpawn = true;
         if (spawnLocation == null) {
-            spawnLocation = AlathranWars.getInstance().getServer().getWorlds().get(0).getSpawnLocation();
+            spawnLocation = AlathranWars.getInstance().getServer().getWorlds().getFirst().getSpawnLocation();
             isBedSpawn = false;
         }
 
-        p.setMetadata(META_AWAITING_RESPAWN, new FixedMetadataValue(AlathranWars.getInstance(), true));
+        pdc.set(PDC_AWAITING_RESPAWN, PersistentDataType.BOOLEAN, true);
 
         final PlayerRespawnEvent respawnEvent = new PlayerRespawnEvent(p, spawnLocation, isBedSpawn, false, false, PlayerRespawnEvent.RespawnReason.DEATH);
+        respawnEvent.setRespawnLocation(spawnLocation);
         respawnEvent.callEvent();
 
         try {
@@ -143,10 +126,52 @@ public class DeathUtil {
         } catch (Throwable ignored) {
         }
 
-        p.teleportAsync(respawnEvent.getRespawnLocation(), PlayerTeleportEvent.TeleportCause.UNKNOWN).thenAccept(success -> {
-            removeSpectator(p, DeathConfig.gameModeToRespawnWith());
-            p.removeMetadata(META_AWAITING_RESPAWN, AlathranWars.getInstance());
-        });
+        p.teleportAsync(respawnEvent.getRespawnLocation(), PlayerTeleportEvent.TeleportCause.UNKNOWN)
+            .thenAccept(success -> {
+                removeSpectator(p);
+                pdc.remove(PDC_AWAITING_RESPAWN);
+                if (success == false)
+                    p.teleport(respawnEvent.getRespawnLocation());
+            });
+    }
+
+    public static void respawnPlayerWar(Player p, Location location) {
+        if (!isSpectating(p) || p.isDead())
+            return;
+
+        final PersistentDataContainer pdc = p.getPersistentDataContainer();
+
+        pdc.set(PDC_AWAITING_RESPAWN, PersistentDataType.BOOLEAN, true);
+
+        final PlayerRespawnEvent respawnEvent = new PlayerRespawnEvent(p, location, true, false, false, PlayerRespawnEvent.RespawnReason.DEATH);
+        respawnEvent.setRespawnLocation(location);
+        respawnEvent.callEvent();
+
+        try {
+            final AttributeInstance maxHealth = p.getAttribute(Attribute.MAX_HEALTH);
+            if (maxHealth != null)
+                p.setHealth(maxHealth.getValue());
+
+            p.setFireTicks(0);
+            p.setFallDistance(0);
+            p.setFoodLevel(20);
+            p.setSaturation(5f);
+            p.setExhaustion(0);
+            p.setTicksLived(1);
+            p.setArrowsInBody(0, false);
+            p.clearActivePotionEffects();
+            p.closeInventory();
+            p.setLastDamageCause(null);
+        } catch (Throwable ignored) {
+        }
+
+        p.teleportAsync(respawnEvent.getRespawnLocation(), PlayerTeleportEvent.TeleportCause.UNKNOWN)
+            .thenAccept(success -> {
+                removeSpectator(p);
+                pdc.remove(PDC_AWAITING_RESPAWN);
+                if (success == false)
+                    p.teleport(respawnEvent.getRespawnLocation());
+            });
     }
 
     public static boolean startDeathSpectating(Player player, PlayerDeathEvent deathEvent) {
@@ -154,7 +179,7 @@ public class DeathUtil {
             return false;
 
         final AlathranWars plugin = AlathranWars.getInstance();
-        final Duration respawnTime = DeathConfig.getRespawnTime();
+        final Duration respawnTime = Duration.ofSeconds(Cfg.get().getOrDefault("respawns.time", 15));
 
         try {
             final World world = player.getWorld();
@@ -163,7 +188,7 @@ public class DeathUtil {
             final boolean showDeathMessages = Boolean.TRUE.equals(world.getGameRuleValue(GameRule.SHOW_DEATH_MESSAGES));
 
             try {
-                addSpectator(player, player.getGameMode(), respawnTime);
+                addSpectator(player, player.getGameMode(), respawnTime, player.getFlySpeed());
             } catch (StartSpectateException e) {
                 return false;
             }
@@ -210,7 +235,8 @@ public class DeathUtil {
                 .volume(1.0f)
                 .pitch(1.0f)
                 .build();
-            Audience.audience(players).playSound(deathSound);
+
+            Audience.audience(players).playSound(deathSound, player);
 
             // Determine killer of the player
             Entity killer = player.getKiller();
@@ -249,7 +275,45 @@ public class DeathUtil {
 
             return true;
         } catch (Exception ignored) {
-            removeSpectator(player, null);
+            removeSpectator(player);
+            return false;
+        }
+    }
+
+    public static boolean resumeDeathSpectating(Player p) {
+        if (!isSpectating(p))
+            return false;
+
+        final AlathranWars plugin = AlathranWars.getInstance();
+        final PersistentDataContainer pdc = p.getPersistentDataContainer();
+
+        // Get previous spectator data from pdc
+
+        Objects.requireNonNull(PDC_RESPAWN_TIMER, "Respawn timer is null");
+        Objects.requireNonNull(PDC_RESPAWN_GAMEMODE, "Respawn game mode is null");
+        Objects.requireNonNull(PDC_RESPAWN_FLYSPEED, "Respawn fly speed is null");
+
+        final Duration previousRespawnTime = Duration.ofSeconds(pdc.getOrDefault(PDC_RESPAWN_TIMER, PersistentDataType.LONG, 0L));
+        final GameMode previousGamemode = GameMode.valueOf(pdc.getOrDefault(PDC_RESPAWN_GAMEMODE, PersistentDataType.STRING, plugin.getServer().getDefaultGameMode().name()));
+        final float previousFlySpeed = pdc.getOrDefault(PDC_RESPAWN_FLYSPEED, PersistentDataType.FLOAT, 1.0F);
+
+        try {
+            try {
+                addSpectator(p, previousGamemode, previousRespawnTime, previousFlySpeed);
+            } catch (StartSpectateException e) {
+                return false;
+            }
+
+            p.closeInventory();
+            p.setSpectatorTarget(null);
+
+            final SpectateTask task = new SpectateTask(p, previousRespawnTime);
+            new DeathSpectatingEvent(task).callEvent();
+            task.runTaskTimer(plugin, 1L, 1L);
+
+            return true;
+        } catch (Exception ignored) {
+            removeSpectator(p);
             return false;
         }
     }
