@@ -1,5 +1,10 @@
 package io.github.alathra.alathranwars.utility;
 
+import com.palmergames.bukkit.towny.TownyAPI;
+import com.palmergames.bukkit.towny.object.Government;
+import com.palmergames.bukkit.towny.object.Nation;
+import com.palmergames.bukkit.towny.object.Town;
+import com.palmergames.bukkit.towny.object.TownBlock;
 import io.github.alathra.alathranwars.conflict.war.War;
 import io.github.alathra.alathranwars.conflict.war.WarController;
 import io.github.alathra.alathranwars.conflict.war.side.Side;
@@ -8,20 +13,16 @@ import io.github.alathra.alathranwars.conflict.war.side.spawn.SpawnBuilder;
 import io.github.alathra.alathranwars.conflict.war.side.spawn.SpawnCreationException;
 import io.github.alathra.alathranwars.conflict.war.side.spawn.SpawnType;
 import io.github.milkdrinkers.colorparser.paper.ColorParser;
-import com.palmergames.bukkit.towny.TownyAPI;
-import com.palmergames.bukkit.towny.object.Government;
-import com.palmergames.bukkit.towny.object.Nation;
-import com.palmergames.bukkit.towny.object.Town;
-import com.palmergames.bukkit.towny.object.TownBlock;
-import org.bukkit.FluidCollisionMode;
+import io.github.milkdrinkers.wordweaver.Translation;
 import org.bukkit.Location;
+import org.bukkit.Material;
+import org.bukkit.Tag;
 import org.bukkit.entity.Player;
-import org.bukkit.util.RayTraceResult;
 import org.bukkit.util.Vector;
 import org.jetbrains.annotations.ApiStatus;
-import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Contains utility methods related to the spawn system
@@ -31,12 +32,13 @@ public final class SpawnUtils {
 
     /**
      * Get all spawns for this side
+     *
      * @param side side
      * @return list of spawns
      * @implNote this computes a list of spawns
      */
     @ApiStatus.Internal
-    public static List<Spawn> getSpawnPoints(Side side) { // TODO Execute
+    public static List<Spawn> computeSpawnPoints(Side side) {
         List<Spawn> locations = new ArrayList<>();
 
         // Include occupied town spawns & outposts
@@ -45,7 +47,7 @@ public final class SpawnUtils {
             .filter(Town::hasSpawn).
             toList();
 
-        occupiedTowns.forEach(t -> locations.addAll(getTownSpawns(t, side)));
+        occupiedTowns.forEach(t -> locations.addAll(computeTownSpawns(t, side)));
 
         // Include town spawns & outposts
         final List<Town> towns = side.getTowns()
@@ -53,19 +55,20 @@ public final class SpawnUtils {
             .filter(Town::hasSpawn)
             .toList();
 
-        towns.forEach(t -> locations.addAll(getTownSpawns(t, side)));
+        towns.forEach(t -> locations.addAll(computeTownSpawns(t, side)));
 
         return locations;
     }
 
     /**
      * Get all spawns for this town
+     *
      * @param town town
      * @return list of spawns
      * @implNote this computes a list of spawns
      */
     @ApiStatus.Internal
-    public static List<Spawn> getTownSpawns(Town town, Side side) {
+    public static List<Spawn> computeTownSpawns(Town town, Side side) {
         List<Spawn> spawns = new ArrayList<>();
 
         if (town.getSpawnOrNull() != null)
@@ -75,25 +78,27 @@ public final class SpawnUtils {
                         .setName(town.getName()).setLocation(town.getSpawnOrNull())
                         .setType(SpawnType.TOWN)
                         .setSide(side)
+                        .setTown(town)
                         .build()
                 );
             } catch (SpawnCreationException e) {
                 Logger.get().debug("Failed to create spawn: ", e);
             }
 
-        spawns.addAll(getOutpostSpawns(town, side));
+        spawns.addAll(computeOutpostSpawns(town, side));
 
         return spawns;
     }
 
     /**
      * Get a map of outpost spawns mapped by outpost name to location
+     *
      * @param town town
      * @return list of spawns
      * @implNote this computes a list of spawns
      */
     @ApiStatus.Internal
-    public static List<Spawn> getOutpostSpawns(Town town, Side side) {
+    public static List<Spawn> computeOutpostSpawns(Town town, Side side) {
         List<Spawn> spawns = new ArrayList<>();
 
         int i = 0;
@@ -111,6 +116,7 @@ public final class SpawnUtils {
                     .setLocation(location)
                     .setType(SpawnType.OUTPOST)
                     .setSide(side)
+                    .setTown(town)
                     .build();
 
                 spawns.add(spawn);
@@ -126,6 +132,7 @@ public final class SpawnUtils {
 
     /**
      * Get a list of all spawns in the plugin
+     *
      * @return list of spawns
      * @implNote this retrieves a cached list
      */
@@ -137,6 +144,7 @@ public final class SpawnUtils {
 
     /**
      * Get a list of all war spawns in this war
+     *
      * @param war war
      * @return list of spawns
      * @implNote this retrieves a cached list
@@ -147,16 +155,18 @@ public final class SpawnUtils {
 
     /**
      * Get a list of all war spawns for this side
+     *
      * @param side side
-     * @return list of spawns
+     * @return set of spawns
      * @implNote this retrieves a cached list
      */
-    public static List<Spawn> getSpawns(Side side) {
+    public static Set<Spawn> getSpawns(Side side) {
         return side.getSpawnManager().getSpawns();
     }
 
     /**
      * Get a list of all war spawns for this government
+     *
      * @param government nation or town
      * @return list of spawns
      * @implNote this retrieves a cached list
@@ -180,6 +190,7 @@ public final class SpawnUtils {
 
     /**
      * Get a list of all war spawns for this player
+     *
      * @param p player
      * @return list of spawns
      * @implNote this retrieves a cached list
@@ -189,11 +200,19 @@ public final class SpawnUtils {
             .map(war -> war.getPlayerSide(p))
             .filter(Objects::nonNull)
             .filter(side -> !side.isSurrendered(p))
-            .flatMap(side -> SpawnUtils.getSpawns(side).stream()).toList();
+            .flatMap(side -> side.getSpawns().stream())
+            .collect(Collectors.toList());
+    }
+
+    // TODO Add sort modes for GUI
+    public enum SortType {
+        ALPHABETICALLY_A_Z,
+        ALPHABETICALLY_Z_A,
     }
 
     /**
      * Sort spawns alphabetically and after category
+     *
      * @param spawns list of spawns
      * @return sorted list of spawns
      */
@@ -207,137 +226,138 @@ public final class SpawnUtils {
 
     /**
      * Get the closest spawn from a list of spawns, (excludes proxied spawns)
-     * @param location the location to compare against
-     * @param spawns a collection of spawns
+     *
+     * @param location     the location to compare against
+     * @param spawns       a collection of spawns
      * @param checkProxied should we check if spawns are proxied
-     * @return a spawn or null
+     * @return a spawn or empty optional
      * @implNote uses {@link #getClosestSpawn(Location, Collection, double, boolean)} internally
      */
-    @Nullable
-    public static Spawn getClosestSpawn(Location location, Collection<Spawn> spawns, boolean checkProxied) {
-        return getClosestSpawn(location, spawns, 1000000000, checkProxied);
+    public static Optional<Spawn> getClosestSpawn(Location location, Collection<Spawn> spawns, boolean checkProxied) {
+        return getClosestSpawn(location, spawns, Double.MAX_VALUE, checkProxied);
     }
 
     /**
-     * Get the closest spawn from a list of spawns, (excludes proxied spawns)
-     * @param location the location to compare against
-     * @param spawns a collection of spawns
-     * @param range a maximum range (spawns outside this range will be ignored)
+     * Get the closest spawn from a list of spawns
+     *
+     * @param location     the location to compare against
+     * @param spawns       a collection of spawns
+     * @param range        a maximum range (spawns outside this range will be ignored)
      * @param checkProxied should we check if spawns are proxied
-     * @return a spawn or null
+     * @return a spawn or empty optional
      */
-    @Nullable
-    public static Spawn getClosestSpawn(Location location, Collection<Spawn> spawns, double range, boolean checkProxied) {
-        Spawn spawnResult = null; // The value to return
-        double closestSpawn = 1000000000;
+    public static Optional<Spawn> getClosestSpawn(Location location, Collection<Spawn> spawns, double range, boolean checkProxied) {
+        return spawns.stream()
+            .filter(s -> !checkProxied || !s.isProxied())
+            .filter(s -> location.getWorld().equals(s.getLocation().getWorld()))
+            .filter(s -> s.getLocation().distanceSquared(location) <= Math.pow(range, 2))
+            .reduce((spawn1, spawn2) -> { // Returns the nearest spawn
+                final Location loc1 = spawn1.getLocation();
+                final double dist1 = loc1.distanceSquared(location);
 
-        for (Spawn spawn : spawns) {
-            final Location spawnLoc = spawn.getLocation();
+                final Location loc2 = spawn2.getLocation();
+                final double dist2 = loc2.distanceSquared(location);
 
-            if (checkProxied && spawn.isProxied()) continue;
-            if (!location.getWorld().equals(spawnLoc.getWorld())) continue;
-
-            final double distance = location.distance(spawnLoc);
-            if (distance < closestSpawn && distance <= range) {
-                spawnResult = spawn;
-                closestSpawn = distance;
-            }
-        }
-
-        return spawnResult;
+                return dist1 < dist2 ? spawn1 : spawn2;
+            });
     }
 
-    public static final double SPAWN_FRIENDLY_MIN_TOWN_RANGE = 300;
-    public static final double SPAWN_FRIENDLY_MIN_OUTPOST_RANGE = 300;
-    public static final double SPAWN_FRIENDLY_MIN_RALLY_RANGE = 120;
+    public static final double SPAWN_FRIENDLY_MIN_TOWN_RANGE = Math.pow(Cfg.get().getOrDefault("respawns.rallies.min-range-town-friendly", 150), 2);
+    public static final double SPAWN_FRIENDLY_MIN_OUTPOST_RANGE = Math.pow(Cfg.get().getOrDefault("respawns.rallies.min-range-outpost-friendly", 100), 2);
+    public static final double SPAWN_FRIENDLY_MIN_RALLY_RANGE = Math.pow(Cfg.get().getOrDefault("respawns.rallies.min-range-rally-friendly", 120), 2);
 
-    public static final double SPAWN_HOSTILE_MIN_TOWN_RANGE = 150;
-    public static final double SPAWN_HOSTILE_MIN_OUTPOST_RANGE = 150;
-    public static final double SPAWN_HOSTILE_MIN_RALLY_RANGE = 40;
+    public static final double SPAWN_HOSTILE_MIN_TOWN_RANGE = Math.pow(Cfg.get().getOrDefault("respawns.rallies.min-range-town-hostile", 100), 2);
+    public static final double SPAWN_HOSTILE_MIN_OUTPOST_RANGE = Math.pow(Cfg.get().getOrDefault("respawns.rallies.min-range-outpost-hostile", 50), 2);
+    public static final double SPAWN_HOSTILE_MIN_RALLY_RANGE = Math.pow(Cfg.get().getOrDefault("respawns.rallies.min-range-rally-hostile", 25), 2);
+
+    // 3x2x3 Rectangle (Spawn location is always 0, 0, 0)
+    final static Vector BOUNDING_BOX_MIN = new Vector(-1, 0, -1);
+    final static Vector BOUNDING_BOX_MAX = new Vector(1, 1, 1);
 
     /**
      * Check if a new spawn location is allowed
+     *
      * @param location location
-     * @param side the side this spawn will be associated with
+     * @param side     the side this spawn will be associated with
      * @throws SpawnCreationException thrown when spawn is illegal
      */
     @ApiStatus.Internal
     public static void isValidSpawnPlacement(Location location, Side side) throws SpawnCreationException {
-        // Check if 3x3x3 is clear around banner
-        final List<Vector> locationList = List.of(
-            new Vector(1D, 2D, 0D),
-            new Vector(1D, 2D, 0D),
-            new Vector(0D, 2D, 1D),
-            new Vector(0D, 2D, 1D)
-        );
+        // Check if 3x2x3 is clear around banner
+        final Vector min = BOUNDING_BOX_MIN;
+        final Vector max = BOUNDING_BOX_MAX;
 
-        for (var vec : locationList) {
-            final RayTraceResult res = location.getBlock().rayTrace(location, vec, 3, FluidCollisionMode.ALWAYS);
-            if (res == null)
-                continue;
+        for (int x = min.getBlockX(); x <= max.getBlockX(); x++) {
+            for (int y = min.getBlockY(); y <= max.getBlockY(); y++) {
+                for (int z = min.getBlockZ(); z <= max.getBlockZ(); z++) {
+                    if (x == 0 || z == 0) // The banner is being placed here :)
+                        continue;
 
-            if (res.getHitBlock() != null)
-                throw new SpawnCreationException(
-                    ColorParser.of("<red>A rally must have a clear 3x3 spawning area around it!").build()
-                );
+                    final Location boxPos = location.clone().add(x, y, z);
+                    if (!isAllowedMaterialNearSpawn(boxPos.getBlock().getType()))
+                        throw new SpawnCreationException(
+                            Translation.as("rally.placement.bounding-box")
+                        );
+                }
+            }
         }
 
         // Check friendly spawns
-        final List<Spawn> friendlySpawns = getSpawns(side);
+        final Set<Spawn> friendlySpawns = getSpawns(side);
 
         for (Spawn spawn : friendlySpawns.stream().filter(spawn -> spawn.getType().equals(SpawnType.TOWN)).toList()) {
-            if (location.distance(spawn.getLocation()) < SPAWN_FRIENDLY_MIN_TOWN_RANGE) // Check if too close to any spawns
+            if (location.distanceSquared(spawn.getLocation()) < SPAWN_FRIENDLY_MIN_TOWN_RANGE) // Check if too close to any spawns
                 throw new SpawnCreationException(
-                    ColorParser.of("<red>A rally must be further than <range> blocks away from a friendly town!")
-                        .with("range", String.valueOf(SPAWN_FRIENDLY_MIN_TOWN_RANGE))
+                    ColorParser.of(Translation.of("rally.placement.min-range-town-friendly"))
+                        .with("range", String.valueOf(Math.sqrt(SPAWN_FRIENDLY_MIN_TOWN_RANGE)))
                         .build()
                 );
         }
 
         for (Spawn spawn : friendlySpawns.stream().filter(spawn -> spawn.getType().equals(SpawnType.OUTPOST)).toList()) {
-            if (location.distance(spawn.getLocation()) < SPAWN_FRIENDLY_MIN_OUTPOST_RANGE) // Check if too close to any spawns
+            if (location.distanceSquared(spawn.getLocation()) < SPAWN_FRIENDLY_MIN_OUTPOST_RANGE) // Check if too close to any spawns
                 throw new SpawnCreationException(
-                    ColorParser.of("<red>A rally must be further than <range> blocks away from a friendly outpost!")
-                        .with("range", String.valueOf(SPAWN_FRIENDLY_MIN_OUTPOST_RANGE))
+                    ColorParser.of(Translation.of("rally.placement.min-range-outpost-friendly"))
+                        .with("range", String.valueOf(Math.sqrt(SPAWN_FRIENDLY_MIN_OUTPOST_RANGE)))
                         .build()
                 );
         }
 
         for (Spawn spawn : friendlySpawns.stream().filter(spawn -> spawn.getType().equals(SpawnType.RALLY)).toList()) {
-            if (location.distance(spawn.getLocation()) < SPAWN_FRIENDLY_MIN_RALLY_RANGE) // Check if too close to any spawns
+            if (location.distanceSquared(spawn.getLocation()) < SPAWN_FRIENDLY_MIN_RALLY_RANGE) // Check if too close to any spawns
                 throw new SpawnCreationException(
-                    ColorParser.of("<red>A rally must be further than <range> blocks away from a friendly rally!")
-                        .with("range", String.valueOf(SPAWN_FRIENDLY_MIN_RALLY_RANGE))
+                    ColorParser.of(Translation.of("rally.placement.min-range-rally-friendly"))
+                        .with("range", String.valueOf(Math.sqrt(SPAWN_FRIENDLY_MIN_RALLY_RANGE)))
                         .build()
                 );
         }
 
         // Check hostile spawns
-        final List<Spawn> hostileSpawns = getSpawns(SideUtils.getOpponent(side));
+        final Set<Spawn> hostileSpawns = getSpawns(SideUtils.getOpponent(side));
 
         for (Spawn spawn : hostileSpawns.stream().filter(spawn -> spawn.getType().equals(SpawnType.TOWN)).toList()) {
-            if (location.distance(spawn.getLocation()) < SPAWN_HOSTILE_MIN_TOWN_RANGE) // Check if too close to enemy spawns
+            if (location.distanceSquared(spawn.getLocation()) < SPAWN_HOSTILE_MIN_TOWN_RANGE) // Check if too close to enemy spawns
                 throw new SpawnCreationException(
-                    ColorParser.of("<red>A rally must be further than <range> blocks away from a hostile town!")
-                        .with("range", String.valueOf(SPAWN_HOSTILE_MIN_TOWN_RANGE))
+                    ColorParser.of(Translation.of("rally.placement.min-range-town-hostile"))
+                        .with("range", String.valueOf(Math.sqrt(SPAWN_HOSTILE_MIN_TOWN_RANGE)))
                         .build()
                 );
         }
 
         for (Spawn spawn : hostileSpawns.stream().filter(spawn -> spawn.getType().equals(SpawnType.OUTPOST)).toList()) {
-            if (location.distance(spawn.getLocation()) < SPAWN_HOSTILE_MIN_OUTPOST_RANGE) // Check if too close to enemy spawns
+            if (location.distanceSquared(spawn.getLocation()) < SPAWN_HOSTILE_MIN_OUTPOST_RANGE) // Check if too close to enemy spawns
                 throw new SpawnCreationException(
-                    ColorParser.of("<red>A rally must be further than <range> blocks away from a hostile outpost!")
-                        .with("range", String.valueOf(SPAWN_HOSTILE_MIN_OUTPOST_RANGE))
+                    ColorParser.of(Translation.of("rally.placement.min-range-outpost-hostile"))
+                        .with("range", String.valueOf(Math.sqrt(SPAWN_HOSTILE_MIN_OUTPOST_RANGE)))
                         .build()
                 );
         }
 
         for (Spawn spawn : hostileSpawns.stream().filter(spawn -> spawn.getType().equals(SpawnType.RALLY)).toList()) {
-            if (location.distance(spawn.getLocation()) < SPAWN_HOSTILE_MIN_RALLY_RANGE) // Check if too close to enemy spawns
+            if (location.distanceSquared(spawn.getLocation()) < SPAWN_HOSTILE_MIN_RALLY_RANGE) // Check if too close to enemy spawns
                 throw new SpawnCreationException(
-                    ColorParser.of("<red>A rally must be further than <range> blocks away from a friendly rally!")
-                        .with("range", String.valueOf(SPAWN_HOSTILE_MIN_RALLY_RANGE))
+                    ColorParser.of(Translation.of("rally.placement.min-range-rally-hostile"))
+                        .with("range", String.valueOf(Math.sqrt(SPAWN_HOSTILE_MIN_RALLY_RANGE)))
                         .build()
                 );
         }
@@ -352,42 +372,45 @@ public final class SpawnUtils {
      */
     @ApiStatus.Internal
     public static Optional<Side> calculateSpawnSide(Location location, Player p) {
-        final List<Side> playerSides = SideUtils.getPlayerSides(p);
-
-        @Nullable Side closestSide = null;
-        double closestSideRange = 1000000000;
-
         // Scan through enemy locations to figure out which side owns the closest one
-        for (Side side : playerSides) {
-            // Get list of all opposing sides (sides we are at war with)
-            final List<Spawn> hostileSpawns = getSpawns(SideUtils.getOpponent(side));
+        return SideUtils.getPlayerSides(p).stream()
+            .filter(side -> side.getWar().isWarTime())
+            .map(side -> SideUtils.getOpponent(side).getSpawns()) // Get list of all opposing/hostile sides' spawns (sides we are at war with)
+            .flatMap(Collection::stream)
+            .filter(spawn -> spawn.getType().equals(SpawnType.TOWN) || spawn.getType().equals(SpawnType.OUTPOST)) // Only keep town and outpost spawns
+            .filter(spawn -> spawn.getLocation().getWorld().equals(location.getWorld())) // Check same world
+            .reduce((spawn1, spawn2) -> { // Get closest spawn
+                final Location loc1 = spawn1.getLocation();
+                final double dist1 = loc1.distanceSquared(location);
 
-            // Scan for closest town
-            for (Spawn spawn : hostileSpawns.stream().filter(spawn -> spawn.getType().equals(SpawnType.TOWN)).toList()) {
-                if (!location.getWorld().equals(spawn.getLocation().getWorld())) continue;
+                final Location loc2 = spawn2.getLocation();
+                final double dist2 = loc2.distanceSquared(location);
 
-                final double distance = location.distance(spawn.getLocation());
-                if (distance < closestSideRange) {
-                    closestSide = side;
-                    closestSideRange = distance;
-                }
-            }
+                return dist1 < dist2 ? spawn1 : spawn2;
+            })
+            .map(Spawn::getSide); // Return optional side
+    }
 
-            // Scan for closest outpost
-            for (Spawn spawn : hostileSpawns.stream().filter(spawn -> spawn.getType().equals(SpawnType.OUTPOST)).toList()) {
-                if (!location.getWorld().equals(spawn.getLocation().getWorld())) continue;
+    public static boolean isAllowedMaterialNearSpawn(Material material) {
+        if (material.isAir())
+            return true;
 
-                final double distance = location.distance(spawn.getLocation());
-                if (distance < closestSideRange) {
-                    closestSide = side;
-                    closestSideRange = distance;
-                }
-            }
-        }
+        if (material.equals(Material.WATER))
+            return false;
 
-        if (closestSide == null)
-            return playerSides.stream().findAny();
+        if (material.equals(Material.LAVA))
+            return false;
 
-        return Optional.of(closestSide);
+        if (!material.isSolid())
+            return true;
+
+        return Tag.SMALL_FLOWERS.isTagged(material) ||
+            Tag.FLOWERS.isTagged(material) ||
+            Tag.SAPLINGS.isTagged(material) ||
+            Tag.CROPS.isTagged(material) ||
+            Tag.CAVE_VINES.isTagged(material) ||
+            Tag.CLIMBABLE.isTagged(material) ||
+            Tag.CORAL_PLANTS.isTagged(material) ||
+            Tag.UNDERWATER_BONEMEALS.isTagged(material);
     }
 }
